syntax = "proto3";

package warcraft;

option go_package = "toxictoast/services/warcraft-service/api/proto";

import "google/protobuf/timestamp.proto";

// ============================================================================
// Character Service
// ============================================================================

service CharacterService {
  rpc CreateCharacter(CreateCharacterRequest) returns (CharacterResponse);
  rpc GetCharacter(GetCharacterRequest) returns (CharacterResponse);
  rpc ListCharacters(ListCharactersRequest) returns (ListCharactersResponse);
  rpc UpdateCharacter(UpdateCharacterRequest) returns (CharacterResponse);
  rpc DeleteCharacter(DeleteCharacterRequest) returns (DeleteCharacterResponse);
  rpc RefreshCharacter(RefreshCharacterRequest) returns (CharacterResponse);
  rpc GetCharacterEquipment(GetCharacterEquipmentRequest) returns (CharacterEquipmentResponse);
  rpc GetCharacterStats(GetCharacterStatsRequest) returns (CharacterStatsResponse);
}

// ============================================================================
// Reference Data Services
// ============================================================================

service RaceService {
  rpc ListRaces(ListRacesRequest) returns (ListRacesResponse);
  rpc GetRace(GetRaceRequest) returns (RaceResponse);
}

service ClassService {
  rpc ListClasses(ListClassesRequest) returns (ListClassesResponse);
  rpc GetClass(GetClassRequest) returns (ClassResponse);
}

service FactionService {
  rpc ListFactions(ListFactionsRequest) returns (ListFactionsResponse);
  rpc GetFaction(GetFactionRequest) returns (FactionResponse);
}

// ============================================================================
// Guild Service
// ============================================================================

service GuildService {
  rpc CreateGuild(CreateGuildRequest) returns (GuildResponse);
  rpc GetGuild(GetGuildRequest) returns (GuildResponse);
  rpc ListGuilds(ListGuildsRequest) returns (ListGuildsResponse);
  rpc UpdateGuild(UpdateGuildRequest) returns (GuildResponse);
  rpc DeleteGuild(DeleteGuildRequest) returns (DeleteGuildResponse);
  rpc RefreshGuild(RefreshGuildRequest) returns (GuildResponse);
  rpc GetGuildRoster(GetGuildRosterRequest) returns (GuildRosterResponse);
}

// ============================================================================
// Messages - Character
// ============================================================================

message Character {
  string id = 1;
  string name = 2;
  string realm = 3;
  string region = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  optional google.protobuf.Timestamp deleted_at = 7;
}

message CharacterDetails {
  string id = 1;
  string character_id = 2;
  string display_name = 3;
  string display_realm = 4;
  int32 level = 5;
  int32 item_level = 6;
  string class_id = 7;
  string race_id = 8;
  string faction_id = 9;
  optional string guild_id = 10;
  optional string thumbnail_url = 11;
  int32 achievement_points = 12;
  optional google.protobuf.Timestamp last_synced_at = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;
}

message CharacterEquipment {
  string id = 1;
  string character_id = 2;
  EquipmentSlot head = 3;
  EquipmentSlot neck = 4;
  EquipmentSlot shoulder = 5;
  EquipmentSlot back = 6;
  EquipmentSlot chest = 7;
  EquipmentSlot wrist = 8;
  EquipmentSlot hands = 9;
  EquipmentSlot waist = 10;
  EquipmentSlot legs = 11;
  EquipmentSlot feet = 12;
  EquipmentSlot finger_1 = 13;
  EquipmentSlot finger_2 = 14;
  EquipmentSlot trinket_1 = 15;
  EquipmentSlot trinket_2 = 16;
  EquipmentSlot main_hand = 17;
  EquipmentSlot off_hand = 18;
  google.protobuf.Timestamp created_at = 19;
  google.protobuf.Timestamp updated_at = 20;
}

message EquipmentSlot {
  int32 item_id = 1;
  string name = 2;
  int32 item_level = 3;
  string quality = 4;
  string icon = 5;
}

message CharacterStats {
  string id = 1;
  string character_id = 2;
  int32 health = 3;
  int32 strength = 4;
  int32 agility = 5;
  int32 intellect = 6;
  int32 stamina = 7;
  int32 critical_strike = 8;
  int32 haste = 9;
  int32 mastery = 10;
  int32 versatility = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

// ============================================================================
// Messages - Guild
// ============================================================================

message Guild {
  string id = 1;
  string name = 2;
  string realm = 3;
  string region = 4;
  string faction_id = 5;
  int32 member_count = 6;
  int32 achievement_points = 7;
  optional google.protobuf.Timestamp last_synced_at = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  optional google.protobuf.Timestamp deleted_at = 11;
}

message Race {
  string id = 1;
  string key = 2;
  string name = 3;
  string faction_id = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Class {
  string id = 1;
  string key = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message Faction {
  string id = 1;
  string key = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message GuildMember {
  string id = 1;
  string guild_id = 2;
  string character_name = 3;
  string character_realm = 4;
  int32 rank = 5;
  int32 level = 6;
  string character_class = 7;
  string race = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// ============================================================================
// Character Requests/Responses
// ============================================================================

message CreateCharacterRequest {
  string name = 1;
  string realm = 2;
  string region = 3;
}

message CharacterResponse {
  Character character = 1;
}

message GetCharacterRequest {
  string id = 1;
}

message ListCharactersRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string region = 3;
  optional string realm = 4;
  optional string faction = 5;
}

message ListCharactersResponse {
  repeated Character characters = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UpdateCharacterRequest {
  string id = 1;
  optional string guild_id = 2;
}

message DeleteCharacterRequest {
  string id = 1;
}

message DeleteCharacterResponse {
  bool success = 1;
  string message = 2;
}

message RefreshCharacterRequest {
  string id = 1;
}

message GetCharacterEquipmentRequest {
  string character_id = 1;
}

message CharacterEquipmentResponse {
  CharacterEquipment equipment = 1;
}

message GetCharacterStatsRequest {
  string character_id = 1;
}

message CharacterStatsResponse {
  CharacterStats stats = 1;
}

// ============================================================================
// Guild Requests/Responses
// ============================================================================

message CreateGuildRequest {
  string name = 1;
  string realm = 2;
  string region = 3;
}

message GuildResponse {
  Guild guild = 1;
}

message GetGuildRequest {
  string id = 1;
}

message ListGuildsRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string region = 3;
  optional string realm = 4;
  optional string faction = 5;
}

message ListGuildsResponse {
  repeated Guild guilds = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message UpdateGuildRequest {
  string id = 1;
}

message DeleteGuildRequest {
  string id = 1;
}

message DeleteGuildResponse {
  bool success = 1;
  string message = 2;
}

message RefreshGuildRequest {
  string id = 1;
}

message GetGuildRosterRequest {
  string guild_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message GuildRosterResponse {
  repeated GuildMember members = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// ============================================================================
// Race Requests/Responses
// ============================================================================

message ListRacesRequest {}

message ListRacesResponse {
  repeated Race races = 1;
}

message GetRaceRequest {
  string id = 1;
}

message RaceResponse {
  Race race = 1;
}

// ============================================================================
// Class Requests/Responses
// ============================================================================

message ListClassesRequest {}

message ListClassesResponse {
  repeated Class classes = 1;
}

message GetClassRequest {
  string id = 1;
}

message ClassResponse {
  Class class = 1;
}

// ============================================================================
// Faction Requests/Responses
// ============================================================================

message ListFactionsRequest {}

message ListFactionsResponse {
  repeated Faction factions = 1;
}

message GetFactionRequest {
  string id = 1;
}

message FactionResponse {
  Faction faction = 1;
}
